--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Query Verse</title>
+    <meta name="description" content="Query Verse is an interactive Q&A platform where you can ask queries, answer them, earn aura, and compete with friends!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://VishnuGawas07.onrender.com" />
+    <meta property="og:title" content="Query Verse" />
+    <meta property="og:description" content="Query Verse is an interactive Q&A platform where you can ask queries, answer them, earn aura, and compete with friends!" />
+    <meta property="og:image" content="https://rukminim2.flixcart.com/image/850/1000/l0e6kcw0/poster/e/i/n/medium-pokemon-go-hd-on-fine-art-paper-hd-quality-wallpaper-original-imagc6xwsb5ttzhx.jpeg?q=90&crop=false" />
+
+
+    <link rel="canonical" href="https://VishnuGawas07.onrender.com" />
   </head>
   <body>
     <div id="root"></div>
