--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:description" content="Query Verse is an interactive Q&A platform where you can ask queries, answer them, earn aura, and compete with friends!" />
     <meta property="og:image" content="https://rukminim2.flixcart.com/image/850/1000/l0e6kcw0/poster/e/i/n/medium-pokemon-go-hd-on-fine-art-paper-hd-quality-wallpaper-original-imagc6xwsb5ttzhx.jpeg?q=90&crop=false" />
 
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4690050343096195"
+     crossorigin="anonymous"></script>
     <link rel="canonical" href="https://VishnuGawas07.onrender.com" />
   </head>
   <body>
